--- a/environment.yaml
+++ b/environment.yaml
@@ -1,6 +1,6 @@
 ---
 - name: security
-  box: 4linux/ubuntu16.04
+  box: ubuntu/bionic64
   hostname: security
   ipaddress: 172.16.0.11
   memory: 512
@@ -8,15 +8,15 @@
   provision: provision/ansible/security.yaml
 
 - name: graylog
-  box: 4linux/debian9
+  box: debian/buster64
   hostname: graylog
   ipaddress: 172.16.0.12
-  memory: 1536
+  memory: 2560
   cpus: 1
   provision: provision/ansible/graylog.yaml
 
 - name: kibana
-  box: 4linux/centos7
+  box: centos/7
   hostname: kibana
   ipaddress: 172.16.0.13
   memory: 2048
