--- a/environment.yaml
+++ b/environment.yaml
@@ -1,21 +1,21 @@
 ---
-- name: security
-  box: ubuntu/bionic64
-  hostname: security
-  ipaddress: 172.16.0.11
-  memory: 512
-  cpus: 1
-  provision: provision/ansible/security.yaml
-
-- name: graylog
+- name: webserver
   box: debian/buster64
+  hostname: webserver
+  ipaddress: 172.16.0.11
+  memory: 2048
+  cpus: 1
+  provision: provision/ansible/webserver.yaml
+
+- name: graylog-audit
+  box: ubuntu/bionic64
   hostname: graylog
   ipaddress: 172.16.0.12
   memory: 2560
   cpus: 1
   provision: provision/ansible/graylog.yaml
 
-- name: kibana
+- name: kibana-audit
   box: centos/7
   hostname: kibana
   ipaddress: 172.16.0.13
