--- a/provision/ansible/kibana.yaml
+++ b/provision/ansible/kibana.yaml
@@ -9,12 +9,12 @@
         path: /etc/hosts
         line: "{{ item }}"
       with_items:
-        - 172.16.0.11 security
+        - 172.16.0.11 webserver
         - 172.16.0.12 graylog
         - 172.16.0.13 kibana
 
     - name: Instalando pacotes de dependencias para o curso
-      yum:
+      apt:
         name: ['unzip', 'wget', 'elinks', 'rsync']
 
     - name: Adicionar usuário suporte
@@ -28,15 +28,3 @@
         src: files/98_4linux
         dest: /etc/sudoers.d
         mode: 0644
-
-    - name: Alterando arquivo do SELinux
-      lineinfile: 
-          path: /etc/selinux/config
-          regexp: '^SELINUX='
-          line: 'SELINUX=disabled'
-
-    - name: Desabilitando o Firewall
-      command: systemctl disable firewalld
-
-    - name: Parando FirewallD
-      command: systemctl stop firewalld
