--- a/provision/ansible/webserver.yaml
+++ b/provision/ansible/webserver.yaml
@@ -25,40 +25,25 @@
         dest: /etc/sudoers.d
         mode: 0644
 
-    - name: Criando diretório /home/suporte/traefik-lab
+    - name: Criando diretório /home/suporte/swarm-lab
       synchronize:
-        src: files/traefik-lab
+        src: files/swarm-lab
         dest: /home/suporte
 
-    - name: Instala pacotes que permitem que o apt seja usado sobre HTTPS
-      apt:
-        name: "{{ packages }}"
-        state: present
-        update_cache: yes
-      vars:
-        packages:
-        - apt-transport-https
-        - ca-certificates
-        - curl
-        - gnupg-agent
-        - software-properties-common
-        - vim
+    - name: Instalando pacotes de dependencias para o curso de Kubernetes
+      yum:
+        name: ['unzip', 'wget', 'elinks', 'rsync', 'git', 'vim', 'yum-utils', 'device-mapper-persistent-data', 'lvm2']
 
-    - name: Adiciona uma chave de assinatura apt para o Docker
-      apt_key:
-        url: https://download.docker.com/linux/debian/gpg
-        state: present
-
-    - name: Adiciona repositorio apt para versao estavel
-      apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/linux/debian buster stable
-        state: present
+    - name: Adiciona repositorio do Docker
+      get_url:
+        url: https://download.docker.com/linux/centos/docker-ce.repo
+        dest: /etc/yum.repos.d/docer-ce.repo
+      become: yes
 
     - name: Instala o Docker e suas dependencias
-      apt:
+      yum:
         name: "{{ packages }}"
         state: present
-        update_cache: yes
       vars:
         packages:
         - docker-ce
@@ -87,4 +72,4 @@
       shell: docker network create --driver=overlay traefik
 
     - name: Provisionar o Traefik e Wordpress no cluster Swarm
-      shell: docker stack deploy -c /home/suporte/traefik-lab/wordpress-deploy.yaml traefik-wordpress
+      shell: docker stack deploy -c /home/suporte/swar-lab/wordpress-deploy.yaml traefik-wordpress
