--- a/provision/ansible/webserver.yaml
+++ b/provision/ansible/webserver.yaml
@@ -9,7 +9,7 @@
         path: /etc/hosts
         line: "{{ item }}"
       with_items:
-        - 172.16.0.11 webserver
+        - 172.16.0.11 webserver wordpress.4labs.example
         - 172.16.0.12 graylog
         - 172.16.0.13 kibana
 
@@ -64,6 +64,7 @@
       service:
         name: docker
         state: restarted
+        enabled: yes
 
     - name: Inicializa o cluster Swarm
       shell: docker swarm init --advertise-addr 172.16.0.11
