--- a/provision/ansible/graylog.yaml
+++ b/provision/ansible/graylog.yaml
@@ -9,7 +9,7 @@
         path: /etc/hosts
         line: "{{ item }}"
       with_items:
-        - 172.16.0.11 webserver
+        - 172.16.0.11 webserver wordpress.4labs.example
         - 172.16.0.12 graylog
         - 172.16.0.13 kibana
 
