--- a/provision/ansible/graylog.yaml
+++ b/provision/ansible/graylog.yaml
@@ -9,22 +9,22 @@
         path: /etc/hosts
         line: "{{ item }}"
       with_items:
-        - 172.16.0.11 webserver wordpress.4labs.example
+        - 172.16.0.11 webserver wordpress.4labs.example chat.4labs.example
         - 172.16.0.12 graylog
-        - 172.16.0.13 kibana
-
-    - name: Instalando pacotes de dependencias para o curso
-      apt:
-        name: ['unzip', 'wget', 'elinks', 'rsync', 'vim']
-
-    - name: Adicionar usuário suporte
+        - 172.16.0.13  kibana.4labs.example
+    
+    - name: Adicionar usuario suporte
       user:
         name: suporte
         shell: /bin/bash
         password : $1$QbUARykG$p2nthVG8AkDvabKPHwboa1
-
+        
     - name: Criando o arquivo 98_4linux
       copy:
         src: files/98_4linux
         dest: /etc/sudoers.d
         mode: 0644
+
+    - name: Instalando pacotes de dependencias para o curso
+      apt:
+        name: ['unzip', 'wget', 'elinks', 'rsync', 'vim']
