--- a/provision/ansible/graylog.yaml
+++ b/provision/ansible/graylog.yaml
@@ -11,7 +11,7 @@
       with_items:
         - 172.16.0.11 webserver wordpress.4labs.example chat.4labs.example
         - 172.16.0.12 graylog
-        - 172.16.0.13  kibana.4labs.example
+        - 172.16.0.13 kibana kibana.4labs.example
     
     - name: Adicionar usuario suporte
       user:
