--- a/provision/ansible/files/rocketchat-deploy/docker-compose.yaml
+++ b/provision/ansible/files/rocketchat-deploy/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   rocketchat:
-    image: rocketchat/rocket.chat:latest
+    image: rocketchat/rocket.chat:3.1.0
     command: >
       bash -c
         "for i in `seq 1 30`; do
